[package]
name = "grisp"
description = "Personal lisp"
version = "0.18.0"
authors = ["Brandon Smith", "yeahross"]
repository = "https://github.com/yeahross0/grisp"
edition = "2021"
exclude = [".github", ".vscode", "TODO.txt"]
license = "MIT"

[lib]
name = "grisp"
path = "src/lib.rs"
test = true
doc = true

[features]
# What integer to use for Value::Int
bigint = ["num-bigint", "num-traits"]
i128 = []
i64 = []
i16 = []
i8 = []

# Use f64 for Value::Float, if unset, use f32
f64 = []

[dependencies]
cfg-if = "1.0"
libm = { version = "0.2", optional = true }
num-traits = { version = "0.2", optional = true }
num-bigint = { version = "0.4", optional = true }
im = { package = "im-rc", version = "15.1" }
internment = "0.8.3"
halfbrown = "0.2.5"
